@@ -1,5 +1,7 @@
 2009-09-20  Chong Yidong  <cyd@stupidchicken.com>
 
+	* cedet/ede/speedbar.el (ede-speedbar-file-setup): Add autoload.
+
 	* cedet/ede.el, cedet/ede/*.el: New files.
 
 	* cedet/cedet.el: Require ede.
